<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.beequeencalendar.ui.calendar.CalendarFragment"
        android:label="@string/app_name">

        <!-- ✅ Добавьте это действие для свайпа -->
        <action
            android:id="@+id/action_calendar_to_archive"
            app:destination="@id/archiveFragment"/>
<!--            app:enterAnim="@anim/nav_default_enter_anim"-->
<!--            app:exitAnim="@anim/nav_default_exit_anim"-->
<!--            app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--            app:popExitAnim="@anim/nav_default_pop_exit_anim" -->
        <action
            android:id="@+id/action_calendar_to_graftEdit"
            app:destination="@id/graftEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/graftEditFragment"
        android:name="com.beequeencalendar.ui.graft.GraftEditFragment"
        android:label="@string/edit_grafting">
        <argument
            android:name="graftId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.beequeencalendar.ui.archive.ArchiveFragment"
        android:label="@string/archive">
        <action
            android:id="@+id/action_archive_to_graftEdit"
            app:destination="@id/graftEditFragment" />
    </fragment>


    <!-- ✅ ДОБАВИТЬ после settingsFragment -->
    <fragment
        android:id="@+id/scheduledAlarmsFragment"
        android:name="com.beequeencalendar.ui.settings.ScheduledAlarmsFragment"
        android:label="@string/scheduled_alarms">

        <action
            android:id="@+id/action_scheduledAlarmsFragment_to_settingsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- ✅ ДОБАВИТЬ action в settingsFragment -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.beequeencalendar.ui.settings.SettingsFragment"
        android:label="@string/settings">

        <action
            android:id="@+id/action_settingsFragment_to_scheduledAlarmsFragment"
            app:destination="@id/scheduledAlarmsFragment" />
        <!-- ✅ ДОБАВИТЬ это действие -->
        <action
            android:id="@+id/action_settingsFragment_to_scheduleListFragment"
            app:destination="@id/scheduleListFragment" />

    </fragment>

    <fragment
        android:id="@+id/scheduleListFragment"
        android:name="com.beequeencalendar.ui.settings.ScheduleListFragment"
        android:label="@string/notification_schedule">
        <action
            android:id="@+id/action_scheduleList_to_scheduleEdit"
            app:destination="@id/scheduleEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/scheduleEditFragment"
        android:name="com.beequeencalendar.ui.settings.ScheduleEditFragment"
        android:label="@string/edit_schedule">
        <argument
            android:name="scheduleId"
            app:argType="long"
            android:defaultValue="0L" />
        <!-- ✅ Action для возврата -->
        <action
            android:id="@+id/action_scheduleEdit_to_scheduleList"
            app:popUpTo="@id/scheduleListFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>
